--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "ts-node": "ts-node",
-    "calculateBmi": "npm run ts-node bmiCalculator.ts"
+    "calculateBmi": "npm run ts-node bmiCalculator.ts",
+    "calculateExercises": "npm run ts-node exerciseCalculator.ts"
   },
   "author": "Pablo Maffioli",
   "license": "ISC",
