--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Exercises for Full Stack Open's Typescript part",
   "main": "index.ts",
   "scripts": {
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "ts-node": "ts-node",
     "calculateBmi": "npm run ts-node bmiCalculator.ts",
     "calculateExercises": "npm run ts-node exerciseCalculator.ts"
@@ -11,7 +13,12 @@
   "author": "Pablo Maffioli",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "ts-node-dev": "^2.0.0"
   }
 }
