--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "ts-node index.ts",
     "dev": "ts-node-dev index.ts",
     "ts-node": "ts-node",
-    "calculateExercises": "npm run ts-node exerciseCalculator.ts"
+    "calculateExercises": "npm run ts-node exerciseCalculator.ts",
+    "lint": "eslint --ext .ts .",
+    "lint-fix": "eslint --ext .ts --fix ."
   },
   "author": "Pablo Maffioli",
   "license": "ISC",
@@ -18,6 +20,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "eslint": "^8.51.0",
     "ts-node-dev": "^2.0.0"
   }
 }
