--- a/package.json
+++ b/package.json
@@ -1,28 +1,39 @@
 {
-  "name": "fso-typescript",
+  "name": "patientor",
   "version": "1.0.0",
-  "description": "Exercises for Full Stack Open's Typescript part",
-  "main": "index.ts",
+  "description": "TypeScript Express backend for FSO Typescript course",
+  "main": "index.js",
   "scripts": {
-    "start": "ts-node index.ts",
+    "tsc": "tsc",
     "dev": "ts-node-dev index.ts",
-    "ts-node": "ts-node",
-    "calculateExercises": "npm run ts-node exerciseCalculator.ts",
     "lint": "eslint --ext .ts .",
-    "lint-fix": "eslint --ext .ts --fix ."
+    "start": "node build/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pablo-maff/FSO-Typescript.git"
+  },
+  "keywords": [
+    "TypeScript",
+    "Backend",
+    "Express",
+    "Node"
+  ],
   "author": "Pablo Maffioli",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pablo-maff/FSO-Typescript/issues"
+  },
+  "homepage": "https://github.com/pablo-maff/FSO-Typescript#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.20",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "eslint": "^8.51.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
