--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "homepage": "https://github.com/pablo-maff/FSO-Typescript#readme",
   "dependencies": {
+    "@types/cors": "^2.8.15",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
