--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "homepage": "https://github.com/pablo-maff/FSO-Typescript#readme",
   "dependencies": {
     "@types/cors": "^2.8.15",
+    "@types/uuid": "^9.0.6",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
